# bulk_runner.rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile.toml  README.md  justfile
.github/: _publish.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  test.yml
crates/bulk_runner_bots/: Cargo.toml
crates/bulk_runner_bots/src/: base_bot.rs  base_bot_dispatch.rs  bot_output.rs  bot_types.rs  error.rs  lib.rs
crates/bulk_runner_cli/: Cargo.toml
crates/bulk_runner_cli/src/: cli.rs  error.rs  lib.rs  main.rs  prelude.rs
crates/bulk_runner_cli/src/bot_handlers/: bot.rs  bot_output.rs  mod.rs
crates/bulk_runner_cli/src/database/: db_context.rs  db_info.rs  mod.rs  query_engine.rs
crates/bulk_runner_internals/: Cargo.toml
crates/bulk_runner_internals/src/: automatec.rs  automatec_futures.rs  error.rs  lib.rs  tests.rs
crates/bulk_runner_internals/src/to_args/: mod.rs
crates/bulk_runner_query/: Cargo.toml
crates/bulk_runner_query/src/: command_builder.rs  db_info.rs  dispatch.rs  error.rs  lib.rs  query_engine.rs
crates/bulk_runner_rs/: Cargo.toml
crates/bulk_runner_rs/src/: cli.rs  error.rs  lib.rs  main.rs  packets.rs  prelude.rs  runner.rs  timekeeper.rs
crates/bulk_runner_rs_v2/: Cargo.toml
crates/bulk_runner_rs_v2/src/: cli.rs  error.rs  lib.rs  main.rs
crates/bulk_runner_rs_v2/src/bots/: base_bot.rs  bot_output.rs  mod.rs
crates/bulk_runner_rs_v2/src/query_controller/: command_builder.rs  db_info.rs  mod.rs  query_engine.rs
docs/: BulkRunner_rs_Outline.excalidraw
