[package]
name = "bulk_runner_bots"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full", "tracing"] }
futures = "0.3.30"
tracing = "0.1.40"
deadpool-tiberius = { version = "0.1.8", features = ["winauth", "chrono"] }

thiserror = "1.0.63"

# tracing-subscriber = { version = "0.3.18", features = [
#     "ansi",
#     "chrono",
#     "env-filter",
#     "serde",
#     "std",
# ] }

# bulk_runner_query = { path = "../bulk_runner_query" }
