[package]
name = "bulk_runner_bots"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["target"]

[dependencies]
# Core dependencies
tokio = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Database
deadpool-tiberius = { workspace = true }
