# cargo-features = ["codegen-backend"] 
# The aboe also needs the profile.dev to be uncommented to use the cranelift backend
[package]
name = "bulk_runner_rs"
version = "0.1.0"
edition = "2021"

# For running the main server as a watch call
# cargo watch -q -c -w src/ -x run

[dependencies]
# Base dependencies/Commons

clap = { version = "4.5.18", features = ["derive", "env"] }
crossterm = { version = "0.28.1", features = ["serde"] }
futures = "0.3.30"
itertools = "0.13.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
bulk_runner_internals = { path = "../bulk_runner_internals", features = ["async"] }
deadpool-tiberius = { version = "0.1.8", features = ["winauth", "chrono"] }

# toml = "0.8.14"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "chrono",
    "env-filter",
    "serde",
    "std",
] }
async-trait = "0.1.82"

# Helpers
# async-trait = "0.1.80"
# dotenv_codegen = "0.15.0"
# dotenv = "0.15.0"
# static-toml = "1.2.0"

# Utilities - Try and remove/code out
# walkdir = "2.5.0"
# chrono = "0.4.9"
# itertools = "0.13.0"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

# [profile.dev]
# codegen-backend = "cranelift"

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
debug = "none"
debug-assertions = false
incremental = true
# strip = "symbols" # Leave off @ w
# lto = "fat" ## Can't use with cranelift yet
# panic = "unwind"
