[package]
name = "bulk_runner_internals"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
anyhow = "1.0.89"

tokio = { version = "1.40.0", features = ["full"], optional = true }
futures = "0.3.30"

[features]
async = ["tokio"]
