[package]
name = "bulk_runner_query"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

rayon = "1.10.0"

## Workspace-core dependencies
bulk_runner_bots = { path = "../bulk_runner_bots" }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Database
deadpool-tiberius = { workspace = true }
